[wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 99
exclude = setup.py, docs/, build/
ignore = F821

[tool:pytest]
testpaths = tests
addopts = --cov=./freelancehunt --cov-report html
log_cli = True

[coverage:run]
branch = True
source = freelancehunt
parallel = True
concurrency = thread, multiprocessing
omit =
    docs/
    tests/
    freelancehunt/__main__.py
